--- a/css/style.css
+++ b/css/style.css
@@ -324,15 +324,11 @@ template {
   border-radius: 2px;
   text-transform: uppercase;
   font-size: 0.713rem; }
-  .button:hover {
-    cursor: pointer; }
   .button--primary {
     background-color: #E3B873;
     color: #fff;
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
     transition: box-shadow 0.3s; }
-    .button--primary:hover {
-      box-shadow: none; }
   .button--outline {
     border: 1px solid #fff;
     background-color: transparent;
@@ -507,8 +503,6 @@ img {
   margin-right: 2.1rem;
   transition: color 0.2s;
   font-size: 0.7rem; }
-  .nav__item:hover {
-    color: #E3B873; }
 
 .phone {
   color: #E3B873;
@@ -955,6 +949,14 @@ img {
     font-size: 12px; }
   .nav__item {
     margin-right: 1rem; } }
+
+@media screen and (min-width: 993px) {
+  .button:hover {
+    cursor: pointer; }
+  .button--primary {
+    box-shadow: none; }
+  .nav__item:hover {
+    color: #E3B873; } }
 
 @media screen and (max-width: 992px) {
   .nav {
