--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -6,7 +6,6 @@
   html
     font-size: 14px
   
-  
 @media screen and ( max-width: 1200px )
   html
     font-size: 12px
@@ -14,6 +13,19 @@
   .nav
     &__item
       margin-right: 1rem
+
+@media screen and ( min-width: 993px  )
+  .button
+    &:hover
+      cursor: pointer
+    &--primary
+      &:hover
+      box-shadow: none
+  .nav
+    &__item
+      &:hover
+        color: $primary
+  
 
 @media screen and ( max-width: 992px )
   .nav
@@ -25,6 +37,8 @@
 
     &__content
       margin-left: 0
+
+  
 
 @media screen and ( max-width: 810px )
   .col
